visualization paper: avoid saved image cutted (like xlabel name not appearing complete)

--- a/visualization/paper/paper.ipynb
+++ b/visualization/paper/paper.ipynb
@@ -146,6 +146,7 @@
     "ax.legend(frameon=False, loc=legend_position)\n",
     "\n",
     "# Save as high-resolution figure\n",
+    "plt.tight_layout()\n",
     "plt.savefig(f\"{filename}.{filetype}\", dpi=dpi, bbox_inches=\"tight\")\n",
     "\n",
     "# Show plot\n",
